--- a/Trainings/style/login.css
+++ b/Trainings/style/login.css
@@ -1,18 +1,24 @@
+
+html {
+    height: 100%;
+}
+
 body {
     background-image: url('../img/background.jpg');
     background-size: cover;
     margin: 0;
+    height: 100%;
 }
 
 main {
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #login-box {
-    margin-top: 50px;
-    width: 500px;
+    width: 700px;
     background-color: #8482FF;
     border: solid 5px #6D6AFF;
     border-radius: 10px;
@@ -22,8 +28,10 @@ main {
 @media(max-width: 700px) {
     #login-box {
         width: 100%;
-        height: 100%;
-        margin: 0;
+        height: 100%;   
+    }
+    main {
+        margin-top: 20px;
     }
 }
 
