--- a/Trainings/style/index.css
+++ b/Trainings/style/index.css
@@ -37,6 +37,18 @@ header {
     padding: 10px 30px;
     border: 5px solid #8482FF;
     cursor: pointer;
+    position: relative;
+}
+
+.trainings-button .notification-number {
+    position: absolute;
+    right: -25px;
+    top: -25px;
+    color: #6D6AFF;
+    background-color: white;
+    border: solid 5px #6D6AFF;
+    border-radius: 50%;
+    padding: 5px 7px;
 }
 
 .trainings-button.selected {
