--- a/App/Frontend/trainings-app/src/styles/CourseRegistrationPage.scss
+++ b/App/Frontend/trainings-app/src/styles/CourseRegistrationPage.scss
@@ -84,16 +84,12 @@ form {
     padding-bottom: 10px;
 }
 
-form .content-wrapper {
-    display: flex;
-    justify-content: center;
-}
-
 .section-header {
     color: white;
     background-color: #6D6AFF;
     width: fit-content;
     padding: 20px;
+    margin-top: 20px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
