--- a/App/Frontend/trainings-app/src/styles/Header.scss
+++ b/App/Frontend/trainings-app/src/styles/Header.scss
@@ -6,6 +6,16 @@
     align-items: center;
     padding: 10px;
 
+    &.alternative {
+        background-color: #6D6AFF;
+        border-bottom-color: white;
+
+        h1 {
+            color: white;
+            font-weight: 900;
+        }
+    }
+
     #header-left {
         display: flex;
         align-items: center;
