Dodanie funkcjonalności wylogowania

--- a/App/Frontend/trainings-app/src/styles/Header.scss
+++ b/App/Frontend/trainings-app/src/styles/Header.scss
@@ -29,5 +29,10 @@
             font-size: 40px;
         }
     }
+
+    #header-right {
+        display: flex;
+        align-items: center;
+    }
 }
 
