--- a/App/Frontend/trainings-app/src/index.scss
+++ b/App/Frontend/trainings-app/src/index.scss
@@ -33,13 +33,14 @@ code {
 
   .notification-number {
     position: absolute;
-  right: -25px;
-  top: -25px;
-  color: #6D6AFF;
-  background-color: white;
-  border: solid 5px #6D6AFF;
-  border-radius: 50%;
-  padding: 5px 7px;
+    right: -20px;
+    top: -25px;
+    color: #6D6AFF;
+    background-color: white;
+    border: solid 5px #6D6AFF;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
   }
 
   &.alternative {
